# SmartBudget02

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  pylint.yml
app/: main.py  schemas.py
data/: Budget 2025-26.xlsx
db/: schemas.py
docker/superset/: Dockerfile
etl/: ingest.py  recommendations.py  scoring.py  seed.py  transform.py
logs/: log251206.json
scripts/: migrate_tags.py
src/SmartBudget/: __init__.py  config.py
src/SmartBudget/etl/: pipelines.py
src/SmartBudget/utils/: logger.py
superset/: superset_config.py
test/: conftest.py  test_etl.py
