[project]
name = "smartbudget02"
version = "0.1.0"
description = "ETL and analysis for Smart Budget project"
author = ["DevashishDalvi <92207754+DevashishDalvi@users.noreply.github.com>"]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.4.2",
    "duckdb-engine>=0.17.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
]
