[tool.poetry]
name = "smartbudget"
version = "0.1.0"
description = "ETL and analysis for Smart Budget project"
authors = ["DevashishDalvi <92207754+DevashishDalvi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
duckdb = "^0.10.0"
pandas = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
