[project]
name = "smartbudget02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.4.2",
    "duckdb-engine>=0.17.0",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
]

[tool.ruff]
# Set the line length to match your formatter (e.g., Black's default)
line-length = 88
target-version = "py310" # Adjust to your Python version

[tool.ruff.lint]
# Extend the default rule selection to include many more checks.
# Add prefixes for rule sets you want to enable.
# Some common strict rule sets include:
# I: isort
# C: mccabe complexity (C901)
# B: bugbear
# A: builtins
# PIE: flake8-pie
# ANN: flake8-annotations
# T20: flake8-print
# RUF: Ruff specific rules
select = ["E", "F", "I", "C", "B", "A", "PIE", "ANN", "T20", "RUF"]

# Exclude specific rules if they are too strict for your project, e.g.,
# ANN101: missing type annotation for self/cls
# T201: print found
# ignore = ["ANN101", "ANN102"]

# Allow auto-fixing for all enabled rules
fixable = ["ALL"]
unfixable = []

[dependency-groups]
dev = [
    "ipython>=9.8.0",
]

# pyproject.toml
# [tool.pytest]
# minversion = "9.0"
# addopts = ["-ra", "-q"]
# testpaths = [
#     "tests",
#     "integration",
# ]
